# smartterminal

./: .env  Cargo.toml
src/: command.rs  main.rs  prompt.rs  terminal.rs
