# Cargo.toml
[package]
name = "cd_shell"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.3"
dotenvy = "0.15.7"
crossterm = "0.27.0"
walkdir = "2.4.0"
tokio = { version = "1", features = ["full"] }

# Official Rust client for Google Gemini APIs
google-ai-rs = { version = "0.1.1", features = ["serde"] }
